--- a/app/views/layout.twig
+++ b/app/views/layout.twig
@@ -10,7 +10,7 @@
 
 <div class="navbar navbar-default">
     <div class="navbar-header">
-        <a class="navbar-brand" href="/">Builder</a>
+        <a class="navbar-brand" href="/history.html">Builder</a>
     </div>
     <div class="navbar-collapse collapse navbar-responsive-collapse">
         {% macro navbar(section_name) %}
