--- a/app/views/history.twig
+++ b/app/views/history.twig
@@ -8,31 +8,68 @@
 {% block content %}
     <h1>History</h1>
 
-    <table class="table table-striped table-hover ">
-        <thead>
-        <tr>
-            <th>#</th>
-            {% for field in structure %}
-                <th>{{ field|capitalize|replace({'_': " "}) }}</th>
-            {% endfor %}
-            <th></th>
-        </tr>
+    <table class="table table-striped table-hover table-responsive">
+        <thead class="table-ordered">
+            <tr>
+                <th>
+                    #
+                    <a href="/builds?order_by=id&order=desc" class="order-desc">
+                        <i class="fa fa-caret-down"></i>
+                    </a>
+                    <a href="/builds?order_by=id&order=asc" class="order-asc">
+                        <i class="fa fa-caret-up"></i>
+                    </a>
+                </th>
+                <th>
+                    App Name / BundleID
+                </th>
+                <th>
+                    Created at
+                    <a href="/builds?order_by=created_at&order=desc" class="order-desc">
+                        <i class="fa fa-caret-down"></i>
+                    </a>
+                    <a href="/builds?order_by=created_at&order=asc" class="order-asc">
+                        <i class="fa fa-caret-up"></i>
+                    </a>
+                </th>
+                <th>
+                    Build version
+                    <i class="fa fa-caret-down order-desc"></i>
+                    <i class="fa fa-caret-up order-asc"></i>
+                </th>
+                <th>Commits range</th>
+                <th>ServerID</th>
+                <th></th>
+            </tr>
         </thead>
         <tbody>
         {% for build in builds %}
             <tr>
-                <td>{{ build._id }}</td>
-                {% for field in structure %}
-                    {% if field == 'build_filename' %}
-                        <td><a href="{{ build_table.getPlistFileUrl(build) }}">{{ build.build_filename }}</a></td>
-                    {% else %}
-                        <td>{{ attribute(build, field) }}</td>
-                    {% endif %}
-                {% endfor %}
+                <td><a href="/builds/{{ build._id }}">{{ build._id | slice(-5) }}</a></td>
                 <td>
-                    <a href="{{ build_table.getPlistFileUrl(build) }}"
-                       class="btn btn-success btn-xs">Download</a>
-                    <a href="/build/delete/{{ build._id }}" class="btn btn-primary btn-xs">Delete</a>
+                    <a href="/builds?name={{ build.name }}">{{ build.name }}</a>
+                    <br>
+                    <a href="/builds?bundle={{ build.bundle }}">{{ build.bundle }}</a>
+                </td>
+                <td>{{ build.created_at.sec | date('m.d.y h:i:s') }}</td>
+                <td><a href="//magnum.travis-ci.com/{{ build.slug }}/builds/{{ build.travis_build_id }}">{{ build.build }}</a></td>
+                <td><a href="//github.com/{{ build.slug }}/compare/{{ build.commit_range }}">{{ build.commit_range }}</a></td>
+                <td><a href="/builds?server_id={{ build.server_id }}">{{ build.server_id }}</a></td>
+                <td>
+                    <a href="{{ build_table.getPlistFileUrl(build) }}" class="btn btn-success btn-xs">Install</a>
+
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-xs btn-info dropdown-toggle" data-toggle="dropdown">
+                        Action <span class="caret"></span>
+                      </button>
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">Download .ipa file</a></li>
+                        <li><a href="#">Change view</a></li>
+                        <li><a href="#">Build history</a></li>
+                        <li class="divider"></li>
+                        <li><a href="/build/delete/{{ build._id }}">Delete build</a></li>
+                      </ul>
+                    </div>
                 </td>
             </tr>
         {% endfor %}
