Links and texts

--- a/app/views/api.twig
+++ b/app/views/api.twig
@@ -2,7 +2,7 @@
 
 {% block navbar %}
     {% import "layout.twig" as layout %}
-    {{ layout.navbar('api') }}
+    {{ layout.navbar('docs') }}
 {% endblock %}
 
 {% block content %}
