Delete build link

--- a/app/views/history.twig
+++ b/app/views/history.twig
@@ -71,7 +71,7 @@
                         <li><a href="//github.com/{{ build.slug }}/compare/{{ build.commit_range }}">Change view</a></li>
                         <li><a href="//magnum.travis-ci.com/{{ build.slug }}/history/{{ build.travis_build_id }}">Build history</a></li>
                         <li class="divider"></li>
-                        <li><a href="/history/{{ build._id }}/delete">Delete build</a></li>
+                        <li><a href="/builds/{{ build._id }}/delete">Delete build</a></li>
                       </ul>
                     </div>
                 </td>
