MBNK-2339 - menu latest

--- a/app/views/layout.twig
+++ b/app/views/layout.twig
@@ -15,6 +15,7 @@
         <div class="navbar-collapse collapse navbar-responsive-collapse">
             {% macro navbar(section_name) %}
                 <ul class="nav navbar-nav navbar">
+                    <li{% if section_name == 'latest' %} class="active"{% endif %}><a href="/latest">Latest</a></li>
                     <li{% if section_name == 'history' %} class="active"{% endif %}><a href="/history">History</a></li>
                     <li{% if section_name == 'docs' %} class="active"{% endif %}><a href="/docs">Api</a></li>
                 </ul>
