--- a/app/views/layout.twig
+++ b/app/views/layout.twig
@@ -10,7 +10,7 @@
 <body>
     <div class="navbar navbar-default">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/history">Builder</a>
+            <a class="navbar-brand" href="/latest">Builder</a>
         </div>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
             {% macro navbar(section_name) %}
